<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Gudang Roti REY</string>
    <string name="jual">Jual</string>
    <string name="stok">Stok Tersedia:</string>
    <string name="stok_req">Masukan Jumlah barang <font color='#FF0000'>*</font></string>
    <string name="varian_rasa">Varian Rasa <font color='#FF0000'>*</font></string>
    <string name="item_price_req">Harga Roti <font color='#FF0000'>*</font></string>
    <string name="save_action">Simpan</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="harga">Harga</string>
    <string name="expired">Tahun Expired</string>
    <string name="expired_req">Tahun Rilis</string>
    <string name="jumlah_barang">Jumlah Roti</string>
    <string name="barang">Roti</string>
    <string name="hapus">Hapus</string>
    <string name="delete_question">Hapus barang dari daftar?</string>
    <string name="tidak">Tidak</string>
    <string name="iya">Iya</string>
    <string name="currency_symbol">Rp </string>
    <string name="edit_item">Edit</string>
    <string name="tambah_barang">Tambahkan Barang Baru</string>
</resources>